# ChangeLog for virtual/postgresql-server
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/postgresql-server/ChangeLog,v 1.2 2007/10/03 20:06:11 swegener Exp $

*postgresql-server-8.2 (03 Oct 2007)
*postgresql-server-8.1 (03 Oct 2007)
*postgresql-server-8.0 (03 Oct 2007)
*postgresql-server-7.4 (03 Oct 2007)
*postgresql-server-7.3 (03 Oct 2007)

  03 Oct 2007; Tiziano Müller <dev-zero@gentoo.org> +metadata.xml,
  +postgresql-server-7.3.ebuild, +postgresql-server-7.4.ebuild,
  +postgresql-server-8.0.ebuild, +postgresql-server-8.1.ebuild,
  +postgresql-server-8.2.ebuild:
  Initial copy from overlay (thanks to Michael Krelin)
