@@ -1,6 +1,8 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/postgresql-server/postgresql-server-7.4.ebuild,v 1.1 2007/10/03 05:13:32 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/postgresql-server/postgresql-server-7.4.ebuild,v 1.2 2008/04/15 09:43:09 dev-zero Exp $
+
+EAPI="1"
 
 DESCRIPTION="Virtual for PostgreSQL libraries"
 HOMEPAGE="http://www.postgresql.org/"
@@ -8,7 +10,7 @@ SRC_URI=""
 
 LICENSE="as-is"
 SLOT="${PV}"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
 IUSE=""
 
-RDEPEND="=dev-db/postgresql-${PV}*"
+RDEPEND="|| ( =dev-db/postgresql-${PV}* dev-db/postgresql-server:${SLOT} )"
