@@ -1,6 +1,14 @@
 # ChangeLog for virtual/postgresql-server
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/postgresql-server/ChangeLog,v 1.2 2007/10/03 20:06:11 swegener Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/postgresql-server/ChangeLog,v 1.3 2008/04/15 09:43:09 dev-zero Exp $
+
+*postgresql-server-8.3 (15 Apr 2008)
+
+  15 Apr 2008; Tiziano Müller <dev-zero@gentoo.org>
+  postgresql-server-7.3.ebuild, postgresql-server-7.4.ebuild,
+  postgresql-server-8.0.ebuild, postgresql-server-8.1.ebuild,
+  postgresql-server-8.2.ebuild, +postgresql-server-8.3.ebuild:
+  Pulled updates from the overlay.
 
 *postgresql-server-8.2 (03 Oct 2007)
 *postgresql-server-8.1 (03 Oct 2007)
